fix spacing between food-item-distance letters

--- a/app/assets/stylesheets/api/food_items.scss
+++ b/app/assets/stylesheets/api/food_items.scss
@@ -55,7 +55,7 @@
 }
 
 .food-item-price {
-  color: orangered;
+  color: #FF4500;
   font-weight: bolder;
   padding-right: 5px;
   padding-left: 10px;
@@ -67,7 +67,7 @@
 
 .food-item-distance {
   color: white;
-  font-weight: bolder;
+  font-weight: bold;
   padding-right: 5px;
   padding-left: 10px;
 }
